--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -62,10 +62,10 @@
 <p>Here are some projects I have been working on:</p>
 <ul>
 <li>
-<p><a href="/Project1/">Project 1</a></p>
+<p><a href="/Project1/">Does Happiness Affect Life Expectancy?</a></p>
 </li>
 <li>
-<p><a href="/Project2/">Project 2</a></p>
+<p><a href="/Project2/">World of Warcraft: Battlegrounds Analysis</a></p>
 </li>
 </ul>
 
