--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -58,8 +58,8 @@
     <h3></h3>
     <div class="panel panel-default">
       <div class="panel-body">
-      <h2 id="projects">Projects</h2>
-<p>Here are some projects I have been working on:</p>
+      <h1 id="--projects--"><strong>Projects</strong></h1>
+<h3 id="below-are-some-projects-that-i-have-completed">Below are some projects that I have completed:</h3>
 <ul>
 <li>
 <p><a href="/Project1/">Does Happiness Affect Life Expectancy?</a></p>
