--- a/content/project1.html
+++ b/content/project1.html
@@ -1,7 +1,7 @@
 ---
 title: "Does Happiness Affect Life Expectancy?"
 author: "Tien Nguyen TN7898"
-date: "10/20/2019"
+date: "2019-10-20"
 output:
   html_document: default
   pdf_document: default
@@ -9,6 +9,7 @@ output:
 
 
 
+<p><img src="/./project1_files/sprout.jpg" width="300" height="100" /></p>
 <div id="introduction-for-this-data-analysis-project" class="section level2">
 <h2>Introduction for this Data Analysis Project:</h2>
 <p>In this project, I will be analyzing two datasets, <strong>lifeexpect</strong> and <strong>happiness2015</strong>. The dataset <strong>lifeexpect</strong> comes from the World Health Organization (WHO), and it contains information on global life expectancies. In addition, it contains a number of health variables contributing to the life expectancies. A few of these are GDP, diseases, schooling, and resources. The second dataset <strong>happiness2015</strong> comes from The World Happiness Report, and it consists of information on global happiness in addition to variables contributing to this happiness value. A few of these variables are scores for freedom, generosity, family, and trust in government.</p>
@@ -169,33 +170,33 @@ clusters &lt;- kmeans(happyxlife[,2,3], 10)
 
 kmeans1&lt;-happyxlife%&gt;%scale%&gt;%kmeans(10)
 kmeans1</code></pre>
-<pre><code>## K-means clustering with 10 clusters of sizes 15, 8, 18, 8, 23, 12, 16, 14, 13, 8
+<pre><code>## K-means clustering with 10 clusters of sizes 22, 8, 23, 10, 14, 7, 11, 5, 18, 17
 ## 
 ## Cluster means:
 ##    Life.expectancy Happiness.Score
-## 1       -0.5821797      -1.0170353
-## 2       -1.9812330      -0.6455950
-## 3        1.1976205       1.6056413
-## 4       -1.7054376      -1.6615847
-## 5        0.4178312      -0.5001663
-## 6        0.4840307       1.1076459
-## 7        0.4345863       0.3314094
-## 8       -0.2048546       0.2199844
-## 9       -1.0868759      -0.8285632
-## 10       1.4117968       0.6765612
+## 1        0.2615873       0.4454632
+## 2        1.4117968       0.6765612
+## 3        0.4712402      -0.4481765
+## 4       -1.2122854      -1.6408572
+## 5       -0.3164506      -0.3465924
+## 6       -2.0738748      -1.1420429
+## 7        0.4995711       1.1369139
+## 8       -1.7620874      -0.3086070
+## 9        1.1976205       1.6056413
+## 10      -0.8858558      -0.9125891
 ## 
 ## Clustering vector:
-##   [1]  3  3  5  5  8  8  5  5  7  7  5  5  8  8  5  7  5  7  5  5  7 10  1  8  5
-##  [26]  8  5 10  1  6  6 10  6  3  5  7  7  8  9  5  7  6  7  6  7  7  8  8  6  7
-##  [51]  7  5  1  3  5  6  5  8  5  6  6  6  5  7  6  1  3  1  8  7  1  8  3  6  1
-##  [76]  5  8  1  1  8  5  2  4  1  4  4  2  4  4  9  9  9  1  9  4  9  2  9  1  2
-## [101]  4  9  7  2  9  2  1  1  2  9  9  2  4  9  9  1  3  3 10  3  3 10  3  5  3
-## [126]  3 10  3 10  3  3  5 10  3  3
+##   [1]  9  9  3  3  5  1  3  3  1  3  3  3  1  5  3  1  3  1  3  3  1  2  5  5  5
+##  [26]  1  3  2  5  7  7  2  7  9  3  1  1  1 10  3  1  7  1  7  1  1  1  1  7  1
+##  [51]  1  3  5  9  3  1  3  1  3  7  7  7  3  3  7 10  9 10  5  1 10  5  9  7  4
+##  [76]  5  5  5  5  5  3  6  4 10  4  4  6  6  6 10 10 10 10 10  4 10  8 10  4  6
+## [101]  6 10  1  8  4  8  4 10  6 10 10  8  4  4  8 10  9  9  2  9  9  2  9  3  9
+## [126]  9  2  9  2  9  9  3  2  9  9
 ## 
 ## Within cluster sum of squares by cluster:
-##  [1] 2.7219870 1.8221297 1.3103230 1.8247384 3.5698654 0.8628159 0.9489192
-##  [8] 2.4858997 1.2396354 1.0635475
-##  (between_SS / total_SS =  93.3 %)
+##  [1] 2.1941560 1.0635475 3.5143651 1.8199017 1.7351699 1.2734162 0.7178647
+##  [8] 0.7063233 1.3103230 1.8326491
+##  (between_SS / total_SS =  94.0 %)
 ## 
 ## Available components:
 ## 
