--- a/content/project2.html
+++ b/content/project2.html
@@ -1,12 +1,13 @@
 ---
 title: "World of Warcraft: Battlegrounds Analysis"
 author: "Tien Nguyen TN7898"
-date: "11/25/2019"
+date: "2019-11-25"
 output: html_document
 ---
 
 
 
+<p><img src="/./project2_files/alivshorde.jpg" width="300" height="100" /></p>
 <div id="introduction" class="section level2">
 <h2>Introduction:</h2>
 <p>In this project, I will be modeling, testing, and making predictions on a dataset created from observations on the game, <strong>World of Warcraft</strong>, which is a MMORPG created by <strong>Blizzard</strong>. This dataset contains information about battlegrounds, which are timed matches in an instanced area where players are able to compete against other players (PvP). Players are placed in teams on the basis of the faction that they belong to, the Alliance or the Horde, and their character’s level, so the matches consist of similar team compositions competing against one another. At the end of each battleground, there is a summary containing information for each of the players for both factions. I will be specifically looking at the numeric variables: <strong>Damage done, Healing done, Honorable kills, and Honor awarded</strong> and the categorical variable: <strong>Faction and Win</strong>.</p>
@@ -152,7 +153,7 @@ for (i in 1:5000) {
 }
 
 mean(rand_dist &gt; 2888.832) * 2</code></pre>
-<pre><code>## [1] 0.0224</code></pre>
+<pre><code>## [1] 0.0128</code></pre>
 <pre class="r"><code># Graphing
 {
     hist(rand_dist, main = &quot;&quot;, ylab = &quot;&quot;)
@@ -498,7 +499,7 @@ diags %&gt;% summarize_all(mean)</code></pre>
 ## [53] vctrs_0.2.0      generics_0.0.2   iterators_1.0.12 tools_3.6.2     
 ## [57] glue_1.3.1       hms_0.5.2        yaml_2.2.0       colorspace_1.4-1
 ## [61] rvest_0.3.5      haven_2.2.0</code></pre>
-<pre><code>## [1] &quot;2019-12-15 01:48:32 CST&quot;</code></pre>
+<pre><code>## [1] &quot;2019-12-15 02:29:56 CST&quot;</code></pre>
 <pre><code>##           sysname           release           version          nodename 
 ##         &quot;Windows&quot;          &quot;10 x64&quot;     &quot;build 17763&quot; &quot;LAPTOP-C6CPOL32&quot; 
 ##           machine             login              user    effective_user 
