--- a/content/resume.html
+++ b/content/resume.html
@@ -7,9 +7,10 @@ output: html_document
 
 
 
+<p><img src="/./resume_files/angel.jpg" width="250" height="375" /></p>
 <div id="background" class="section level2">
 <h2>Background</h2>
-<p>I graduated from the University of Texas at Austin with a Bachelor of Science and Arts in Biology. I am a pre-med student with hopes of attending medical school in my near future. Aside from school work, I am quite involved with a local animal shelter in Austin, TX. I volunteer and foster for Austin Pets Alive! and it is so rewarding. In my free time, I love reading, watching documentaries, and playing video games.</p>
+<p>I graduated from the University of Texas at Austin with a Bachelor of Science and Arts in Biology. I am a pre-med student with hopes of attending medical school in my near future. Aside from school work, I am quite involved with a local animal shelter in Austin, TX. I volunteer and foster for Austin Pets Alive! and it is so rewarding. I am a huge advocate for adopting animals and have two of my own! I have a pup named Maximus and a kitty named Maeby. In my free time, I love reading, watching documentaries, and playing video games.</p>
 <hr />
 </div>
 <div id="experience" class="section level2">
