even more changes

--- a/content/resume.html
+++ b/content/resume.html
@@ -1,7 +1,7 @@
 ---
 title: "About Me!"
 author: "Tien Angel Nguyen"
-date: "12/15/2019"
+date: "2019-12-14"
 output: html_document
 ---
 
@@ -23,4 +23,10 @@ output: html_document
 <h2>Other Skills:</h2>
 <p>I am very familiar with: Microsoft Excel, Powerpoint, and Word, and R Programming. I have also been introduced to Python.
 I am able to fluently speak English and Vietnamese, and have an intermediate-level knowledge of Spanish, Korean, and ASL.</p>
+<hr />
+</div>
+<div id="contact-me" class="section level2">
+<h2>Contact Me:</h2>
+<p>My email is: <a href="mailto:anguyen0107@gmail.com" class="email">anguyen0107@gmail.com</a>; do feel free to send me any questions/concerns.</p>
+<p>You can also click <a href="mailto:{{ .Site.Params.Social.Email }}">here</a>!</p>
 </div>
