--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -61,7 +61,7 @@
         </div>
         <div class="blog-title">
           <h4>
-          January 1, 0001
+          December 14, 2019
             &nbsp;&nbsp;
             
           </h4>
@@ -88,6 +88,12 @@
 <h2>Other Skills:</h2>
 <p>I am very familiar with: Microsoft Excel, Powerpoint, and Word, and R Programming. I have also been introduced to Python.
 I am able to fluently speak English and Vietnamese, and have an intermediate-level knowledge of Spanish, Korean, and ASL.</p>
+<hr />
+</div>
+<div id="contact-me" class="section level2">
+<h2>Contact Me:</h2>
+<p>My email is: <a href="mailto:anguyen0107@gmail.com" class="email">anguyen0107@gmail.com</a>; do feel free to send me any questions/concerns.</p>
+<p>You can also click <a href="mailto:{{ .Site.Params.Social.Email }}">here</a>!</p>
 </div>
 
               <hr>
