--- a/content/resume.html
+++ b/content/resume.html
@@ -28,5 +28,5 @@ I am able to fluently speak English and Vietnamese, and have an intermediate-lev
 <div id="contact-me" class="section level2">
 <h2>Contact Me:</h2>
 <p>My email is: <a href="mailto:anguyen0107@gmail.com" class="email">anguyen0107@gmail.com</a>; do feel free to send me any questions/concerns.</p>
-<p>You can also click <a href="mailto:{{ .Site.Params.Social.Email }}">here</a>!</p>
+<p>You can also click <a href="mailto:{{ anguyen0107@gmail.com }}">here</a>!</p>
 </div>
