--- a/content/resume.html
+++ b/content/resume.html
@@ -29,4 +29,6 @@ I am able to fluently speak English and Vietnamese, and have an intermediate-lev
 <h2>Contact Me:</h2>
 <p>My email is: <a href="mailto:anguyen0107@gmail.com" class="email">anguyen0107@gmail.com</a>; do feel free to send me any questions/concerns.</p>
 <p>You can also click <a href="mailto: anguyen0107@gmail.com ">here</a>!</p>
+<hr />
+<p><strong>Note</strong>: a static form of my resume can be found on the home page.</p>
 </div>
