--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -74,12 +74,12 @@
 
 <p><img src="/./resume_files/angel.jpg" width="250" height="375" /></p>
 <div id="background" class="section level2">
-<h2>Background</h2>
+<h2>Background:</h2>
 <p>I graduated from the University of Texas at Austin with a Bachelor of Science and Arts in Biology. I am a pre-med student with hopes of attending medical school in my near future. Aside from school work, I am quite involved with a local animal shelter in Austin, TX. I volunteer and foster for Austin Pets Alive! and it is so rewarding. I am a huge advocate for adopting animals and have two of my own! I have a pup named Maximus and a kitty named Maeby. In my free time, I love reading, watching documentaries, and playing video games.</p>
 <hr />
 </div>
 <div id="experience" class="section level2">
-<h2>Experience</h2>
+<h2>Experience:</h2>
 <p>I was an intern UGTA for Biochemistry during the Fall semester of 2018, and then I was a UGTA for Biochemistry for Spring 2019 and Fall 2019. During this time, I actively participated in class by monitoring students and answered questions during quizzes and lecture; additionally, I held office hours and review sessions before exams.</p>
 <p>I was also able to volunteer as a research lab assistant for an infectious disease pharmacy lab at the University of Houston during the Summer of 2019. I participated as a member in the lab by collecting and aliquoting samples, running various PCRs, and aiding in data collection for various projects. I contributed mainly to research efforts for Vancomycin and Clostridium difficile. I totaled over 350 hours of work.</p>
 <hr />
